Feat(weather-forecast): - component desgn for home, profile and weather detail view. - open weather api implementation. - firebase database setup and login implementation.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
 # This is an example file for creating .env file. usually it contains sample data and instructions not the sensitive data.
 # But for this particular project simply copy all these values and create .env file for firebase app to work properly.
 
+# firbase credentials and config
 VITE_API_KEY=AIzaSyB73fRB-4jpbprWmUXaktyrIKygufWNwHI
 VITE_AUTH_DOMAIN=weather-forecast-demo-app.firebaseapp.com
 VITE_PROJECT_ID=weather-forecast-demo-app
 VITE_STORAGE_BUCKET=weather-forecast-demo-app.appspot.com
 VITE_MESSAGING_SENDER_ID=604918190384
 VITE_APP_ID=1:604918190384:web:b45b39de82820c95d078f5
+
+#Open weather credentials
+VITE_OPEN_WEATHER_BASE_URL=https://api.openweathermap.org/data/2.5
+VITE_OPEN_WEATHER_API_KEY=cd45b41a633b60d2fef70d5fbd32272c
