--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.8.0",
+    "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vue3-toastify": "^0.2.1"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
