Feat(update): - read me file updated with necessary instructions. - empty data view UI added for user saved data

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# This is an example file for creating .env file. usually it contains sample data and instructions not the sensitive data.
-# But for this particular project simply copy all these values and create .env file for firebase app to work properly.
+# This is an example file for creating .env file. usually it contains sample data and instructions, not the sensitive data.
+# But for this particular project simply copy all these values and create .env file for firebase app and api's to work properly.
 
 # firbase credentials and config
 VITE_API_KEY=AIzaSyB73fRB-4jpbprWmUXaktyrIKygufWNwHI
